[package]
name = "bambis-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_rapier2d = "0.19.0"
bevy_slinet = { git = "https://github.com/arilotter/bevy_slinet.git", rev = "e1c10ee4a989c200ea03e0dac414b36d9b036d74", features = [
    "client",
    "bincode",
    "protocol_udp",
    "serializer_bincode",
] }
instant = "0.1.12"
rand = "0.8.5"
proto = { path = "../proto" }
bevy_simple_stat_bars = { git = "https://github.com/arilotter/bevy_simple_stat_bars.git", rev = "caa69c0f1f0e4a935eceff69dbac1e10aa33d115" }
bevy_magic_light_2d = { git = "https://github.com/zaycev/bevy-magic-light-2d.git", version = "0.3.0" }
