[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_slinet = { path = "../slinet", features = [
    "bincode",
    "protocol_udp",
    "serializer_bincode",
] }
serde = { version = "1.0.152", features = ["derive"] }
