[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_slinet = { git = "https://github.com/arilotter/bevy_slinet.git", rev = "e1c10ee4a989c200ea03e0dac414b36d9b036d74", features = [
    "bincode",
    "protocol_udp",
    "serializer_bincode",
] }
serde = { version = "1.0.152", features = ["derive"] }
