[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_slinet = { git = "https://github.com/arilotter/bevy_slinet.git", rev = "e1c10ee4a989c200ea03e0dac414b36d9b036d74", features = [
    "server",
    "bincode",
    "protocol_udp",
    "serializer_bincode",
] }
proto = { path = "../proto" }
rand = "0.8.5"
bevy = "0.9"
bevy_rapier2d = "0.20.0"
